# QtNovaFramelessWindow

./: CMakeLists.txt  README.md  Window.cpp  Window.h  main.cpp  resources.qrc
